WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114541
REGRESSION (
r141981
): Crash when closing a Google Docs document
https://bugs.webkit.org/show_bug.cgi?id=114541
Summary
REGRESSION (r141981): Crash when closing a Google Docs document
Alexey Proskuryakov
Reported
2013-04-12 15:59:27 PDT
FrameNetworkingContext::shouldClearReferrerOnHTTPSToHTTPRedirect gets called when m_frame is null, because there is an onunload ping that has a redirect from https to http. <
rdar://problem/13277362
>
Attachments
proposed fix
(4.01 KB, patch)
2013-04-12 16:03 PDT
,
Alexey Proskuryakov
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-04-12 16:03:41 PDT
Created
attachment 197902
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2013-04-12 16:10:53 PDT
Committed <
https://trac.webkit.org/r148310
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug