        <rdar://problem/13277362> REGRESSION (r141981): Crash when closing a Google Docs document         https://bugs.webkit.org/show_bug.cgi?id=114541

Reviewed by Brady Eidson.

        Test: http/tests/ssl/ping-with-unsafe-redirect.html

        * loader/FrameNetworkingContext.h:
        (WebCore::FrameNetworkingContext::shouldClearReferrerOnHTTPSToHTTPRedirect):
        Added a null check. All NetworkingContext functions except for this one had it already.



Canonical link: https://commits.webkit.org/132920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148310 268f45cc-cd09-0410-ab3c-d52691b4dbfc